# regex-cgen

./: .gitignore  .gitmodules  AGENTS.md  README.md  build_backend.py  parse_pcre2_tests.py  pyproject.toml  requirements.md  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/emx_regex_cgen/: __init__.py  cli.py  codegen.py  codegen_bitnfa.py  compiler.py  parser.py  result.py  unicode_data.py
src/regex_cgen/: __init__.py  cli.py  codegen.py  codegen_bitnfa.py  compiler.py
src/regex_cgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: _support.py  conftest.py  test_alphabet_compression.py  test_bitnfa.py  test_build_backend.py  test_codegen.py  test_encoding.py  test_generated_code.py  test_golden.py  test_re2_compat_features.py  test_row_dedup.py  test_word_boundary.py  update_codegen_errors.py  update_golden.py
tests/data/: parse_pcre2_tests.py  re2_compat_errors.json  re2_compat_results.json
tests/golden/: alphabet_compression.c  alternation.c  alternation_bitnfa.c  anchors.c  anchors_bitnfa.c  bitnfa_uint16.c  bitnfa_uint32.c  bitnfa_uint32_array.c  bitnfa_uint8.c  char_class.c  char_class_bitnfa.c  dot.c  dot_bitnfa.c  early_exit.c  emit_main.c  emit_main_bitnfa.c  encoding_bytes.c  encoding_bytes_bitnfa.c  escape_digit.c  escape_digit_bitnfa.c  escape_space.c  escape_space_bitnfa.c  escape_word.c  escape_word_bitnfa.c  flag_dotall.c  flag_dotall_bitnfa.c  flag_ignorecase.c  flag_ignorecase_bitnfa.c  flag_multiline.c  flag_multiline_bitnfa.c  flag_verbose.c  flag_verbose_bitnfa.c  (+20 more)
