[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7.0"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "emx-regex-cgen"
description = "Regex to C code generator"
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist", "ruff"]

[project.scripts]
emx-regex-cgen = "emx_regex_cgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -q"
